Removing intermediate road-to-ushuaia landing page
The auto-redirect causes too many problems with Safari

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -1,22 +1,27 @@
 <div class="page-container">
-<mat-card routerLink="/road-to-ushuaia">
-  <mat-card-header>
-    <mat-card-title>Motorcycle ride from California to bottom of Argentina</mat-card-title>
-    <mat-card-subtitle>Hablas español?</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <p>
-      I'm riding my motorcycle on the largest expedition I've ever done; a one year
-      ride from California to the very bottom of South America. I spend several years learning spanish solo
-      and in immersion programs in Central America, as well as left my job in order to properly
-      accomplish this one.
-    </p>
-    <img
-        imgurId="OWyvgXl"
-        [preventDialogOpening]="true"
-        alt="a side shot of a 1994 KLR650 in a driveway fully loaded with 3 metal panniers, ready to be taken on an adventure"/>
-  </mat-card-content>
-</mat-card>
+  <a
+      href="https://advrider.com/f/threads/1750647/page-1000"
+      target="_blank"
+      style="text-decoration: none; color: unset;">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Motorcycle ride from California to bottom of Argentina</mat-card-title>
+      <mat-card-subtitle>Hablas español?</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        I'm riding my motorcycle on the largest expedition I've ever done; a one year
+        ride from California to the very bottom of South America. I spend several years learning spanish solo
+        and in immersion programs in Central America, as well as left my job in order to properly
+        accomplish this one.
+      </p>
+      <img
+          imgurId="OWyvgXl"
+          [preventDialogOpening]="true"
+          alt="a side shot of a 1994 KLR650 in a driveway fully loaded with 3 metal panniers, ready to be taken on an adventure"/>
+    </mat-card-content>
+  </mat-card>
+  </a>
 
   <mat-card routerLink="/euro-trip-2023">
     <mat-card-header>
