--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -11,11 +11,12 @@ nav {
   margin: auto;
   text-align:center;
   padding-bottom:1px;
-  background:
+  /*background:
     linear-gradient(to right, #f81d00 0%, #f9d423 100%)
-    left 
+    left
     bottom
-    transparent    
-    no-repeat; 
-  background-size:100% 1px ;
+    transparent
+    no-repeat;
+  background-size:100% 1px ;*/
+  border-bottom: 2px solid #D2042D;
 }
