--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -140,6 +140,13 @@
     wear a cheap and thin painter suit while others wrap you in 2 layers of duct tape then cut you out of it.
   </p>
   <p>
+    One problem I had early was that I marked the color borders for the arms on my duck tape dummy in the wrong spots.
+    My hands were rotated with the palms facing forward when the dummy was made, which led me to mark up the dummy
+    based on that orientation. However, it's important to create the patterns assuming your palms are facing down,
+    as that orientation is the natural way the fur will fold when putting your arms back down; the fabric will not
+    twist naturally the same way as your arms will inside the suit.
+  </p>
+  <p>
     I built up a skin-tight masking tape layer around the dummy that I can use to draw on without worrying that I'm
     affecting the dummy itself (in case revisions need to be done).
   </p>
@@ -154,6 +161,12 @@
     Once all pieces were cut out (several days of effort) I double checked they were all there by laying them out.
   </p>
   <img loading="lazy" imgurId="Pq148ha" />
+  <p>
+    Early on in the process I was undecided on some of the patterns, like where the border of light and dark grey fur
+    made sense to wrap around my arms. I decided that the entire front of my bicep should be the darker grey that is
+    on the top/outer part of the arm. It felt like it flowed across the body that way, instead of cutting across the
+    top of the bicep. <b>Patterns that follow natural muscle borders along your body almost always look better.</b>
+  </p>
   <img loading="lazy" imgurId="gOFSieU" />
   <p>
     I decided to sew it up in left and right halves independently which helped make the amount of material you're
