--- a/src/app/travels/road_to_ushuaia/road_to_ushuaia_page.html
+++ b/src/app/travels/road_to_ushuaia/road_to_ushuaia_page.html
@@ -7,6 +7,8 @@
   <mat-card-content>
     <p>Redirecting to my thread on Advrider.com...</p>
     <p>If you'd like to reach me direct, text me on Whatsapp!</p>
-    <p>If this page isn't redirecting you, <a [href]="advRiderURL" target="_blank">click here</a></p>
+    <p>
+      <b>If this page isn't redirecting you, <a [href]="advRiderURL" target="_blank">click here</a></b>
+    </p>
   </mat-card-content>
 </mat-card>
